# Ltw-fear

./: .gitignore  CMakeLists.txt  README.md  build.gradle  fabric.mod.json  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build.yml
assets/: high_res_assets.h
src/: main.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/main/cpp/: vulkan_bridge.cpp  vulkan_engine.cpp  vulkan_performance.cpp
src/main/cpp/include/: jni_bridge.h  vulkan_renderer.h
src/main/cpp/src/: jni_bridge.cpp  vulkan_renderer.cpp
src/main/java/com/ltw/vulkan/: LtwVulkanMod.java
src/main/java/com/ltw/vulkan/mixin/: PerformanceMixin.java
src/main/java/com/mephistopheles/vulkanboost/: OpenGLOptimizer.java  VulkanBoostMod.java
src/main/java/com/mephistopheles/vulkanboost/mixins/: MixinGameRenderer.java  MixinMinecraftClient.java
src/main/java/com/mephistopheles/vulkanboost/vulkan/: NativeLibraryLoader.java  VulkanRenderer.java
src/main/java/com/performance/vulkanmod/: VulkanPerformanceMod.java
src/main/java/com/performance/vulkanmod/client/: VulkanPerformanceModClient.java
src/main/java/com/performance/vulkanmod/mixin/: BlockPlacementMixin.java  CameraMixin.java  CritLagMixin.java  EntityRendererMixin.java  FireOverlayMixin.java  GameRendererMixin.java  MinecraftClientMixin.java  ParticleOptimizationMixin.java
src/main/java/com/vulkanplus/: VulkanPlus.java
src/main/resources/: boost.sh  fabric.mod.json  vulkan-performance-mod.mixins.json  vulkanboost.mixins.json
src/optimization/: FPSOptimizer.cpp  MemoryOptimizer.cpp  TPSOptimizer.cpp
